# ollama_rust

./: .gitignore  README.md  example.justfile  package-lock.json  package.json
.github/workflows/: deploy-api.yml  deploy-web.yml
.husky/: pre-commit
api/: Cargo.toml  Dockerfile
api/src/: main.rs
iac/: main.tf  outputs.tf  variables.tf  web.tf
iac/infra/: main.tf  outputs.tf  variables.tf
iac/infra/.terraform/: terraform.tfstate
iac/k8s/: .terraform.lock.hcl  main.tf  variables.tf
iac/k8s/.terraform/: terraform.tfstate
web/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
web/src/: App.js  App.tsx  main.js  main.tsx  types.ts
web/src/components/: ChatWindow.js  ChatWindow.tsx  InputBar.js  InputBar.tsx  MessageBubble.js  MessageBubble.tsx  Sidebar.js  Sidebar.tsx  index.tsx  style.js  style.ts
