[package]
name = "ollama_api"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "ollama_api"
path = "src/main.rs"

[dependencies]
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
futures-util = "0.3"
async-stream = "0.3"
bytes = "1"
anyhow = "1"
dashmap = "6"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
